# ipydatagrid

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc.js  .travis.yml  .yarnrc.yml  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  babel.config.js  ipydatagrid.json  jest.config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-environment-ipyw7.yaml  test-environment-ipyw8.yaml  test-environment.yaml  tox.ini  tsconfig.json  webpack.config.js
.github/workflows/: check.yml  jest.yml  update_galata_references.yml
binder/: environment.yml
css/: datagrid-widget.css  datagrid.css  jupyter-widget.css
examples/: BoolRenderer.ipynb  CellEditing.ipynb  Column Width Auto-Fit.ipynb  ConditionalFormatting.ipynb  DataGrid.ipynb  HtmlRenderer.ipynb  HyperlinkRenderer.ipynb  Nested Hierarchies.ipynb  Pandas.ipynb  Selections.ipynb  Streaming.ipynb  Text Wrapping and Eliding.ipynb  Themes.ipynb  Trees_paris.ipynb  bqplot.ipynb  cars.json
ipydatagrid/: __init__.py  _frontend.py  _version.py  cellrenderer.py  datagrid.py
ipydatagrid/nbextension/: __init__.py  extension.js
ipydatagrid/nbextension/static/: extension.js
ipydatagrid/test/: test_py2vega.py
ipydatagrid/vegatranspiler/: constants.py  math.py  py2vega.py
js/: cellrenderer.ts  datagrid.ts  datasource.ts  extension.ts  feathergrid.ts  index.ts  keyhandler.ts  mousehandler.ts  plugin.ts  streamingfeathergrid.ts  utils.ts  vegaexpr.ts  version.ts
js/core/: barrenderer.ts  datagrid.ts  deserialize.ts  filterMenu.ts  graphicscontext.ts  gridContextMenu.ts  headerRenderer.ts  htmlRenderer.ts  streamingview.ts  streamingviewbasedjsonmodel.ts  transform.ts  transformExecutors.ts  transformStateManager.ts  valueRenderer.ts  view.ts  viewbasedjsonmodel.ts
src/: cellrenderer.ts  datagrid.ts  datagridwidget.ts  extension.ts  feathergrid.ts  index.ts  plugin.ts  utils.ts  vegaexpr.ts  version.ts
src/core/: barrenderer.ts  basickeyhandler.ts  basicmousehandler.ts  celleditor.ts  celleditorcontroller.ts  cellrenderer.ts  datagrid.ts  filterMenu.ts  gridContextMenu.ts  headerRenderer.ts  ipydatagrid.ts  transform.ts  transformExecutors.ts  transformStateManager.ts  valueRenderer.ts  view.ts  viewbasedjsonmodel.ts
src/tests/: arrayUtils.test.ts  datagrid.test.ts  filterMenu.test.ts  setupFile.js  testUtils.ts  transformExecutors.test.ts  transformStateManager.test.ts  view.test.ts  viewbasedjsonmodel.test.ts
style/: feathergrid.css
tests/: test_datagrid.py  test_init.py
tests/js/: arrayUtils.test.ts  datagrid.test.ts  filterMenu.test.ts  setupFile.js  testUtils.ts  transformExecutors.test.ts  transformStateManager.test.ts  view.test.ts  viewbasedjsonmodel.test.ts
ui-tests/: package.json
ui-tests-ipw7/: package.json
ui-tests-ipw7/tests/: ipydatagrid.test.ts
ui-tests-ipw7/tests/notebooks/: conditional_formatting.ipynb  datagrid.ipynb  datagrid_base_update.ipynb  datagrid_nested_hierarchies_update.ipynb  html_renderer.ipynb  themes_update.ipynb
ui-tests-ipw8/: jupyter_server_config.py
ui-tests-ipw8/tests/: ipydatagrid.test.ts
ui-tests-ipw8/tests/notebooks/: conditional_formatting.ipynb  datagrid.ipynb  datagrid_nested_hierarchies.ipynb  datagrid_nested_hierarchies_update.ipynb  date.ipynb  empty.ipynb  html_renderer.ipynb  vega_expressions.ipynb
ui-tests/tests/notebooks/: datagrid.ipynb  datagrid_nested_hierarchies_update.ipynb
widget-examples/basic/: index.css  index.html  index.ts  tsconfig.json  webpack.config.js
