[build-system]
requires = [
    "setuptools>=44",
    "wheel>=0.30",
    "jupyter_packaging~=0.9.0",
    "jupyterlab~=3.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = ["ipydatagrid", "tests"]
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"

[tool.black]
line-length = 80
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
