[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.18",
  "jupyterlab>=4.0.5",
]

[project]
name = "ipydatagrid"
version = "1.3.2"
description = "Fast Datagrid widget for the Jupyter Notebook and JupyterLab"
readme = "README.md"
keywords = [
  "IPython",
  "Jupyter",
  "Widgets",
]
authors = [
    { name = "Bloomberg" },
]
requires-python = ">=3.8"
classifiers = [
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "bqplot>=0.11.6",
  "ipywidgets<9,>=7.6",
  "pandas>=1.3.5",
  "py2vega>=0.5",
]
optional-dependencies.test = [
  "nbval>=0.10",
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
urls.Homepage = "https://github.com/bloomberg/ipydatagrid"
project.license = {file = "LICENSE.txt"}

[tool.hatch.build]
artifacts = [
    "ipydatagrid/nbextension/index.*",
    "ipydatagrid/labextension",
]
targets.sdist.exclude = [
    ".github",
    "examples",
    "tests",
    "ui-tests*",
    "widget-examples",
    "binder",
    "*.yaml",
    ".npmignore",
    ".eslint*",
    "__mocks__",
    "*.yml",
    "*.ini",
    ".pre*",
    "jest*",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipydatagrid/nbextension" = "share/jupyter/nbextensions/ipydatagrid"
"ipydatagrid/labextension" = "share/jupyter/labextensions/ipydatagrid"
"ipydatagrid.json" = "etc/jupyter/nbconfig/notebook.d/ipydatagrid.json"

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "ipydatagrid/nbextension/index.js",
    "ipydatagrid/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.black]
line-length = 80
exclude = "/(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
known_first_party = [
    "ipydatagrid",
    "tests",
]
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"

[tool.codespell]
ignore-words-list = "statics"
skip = "*/yarn.lock"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "1.3.2"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "ipydatagrid/_version.py"

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""
