[metadata]
description-file = README.md
license_file = LICENSE.txt
license = BSD
name = ipydatagrid
description = Fast Datagrid widget for the Jupyter Notebook and JupyterLab
long_description = Fast Datagrid widget for the Jupyter Notebook and JupyterLab
author = Bloomberg
url = https://github.com/bloomberg/ipydatagrid
keywords = Jupyter, Widgets, IPython
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Jupyter


[options]
include_package_data = True
zip_safe = False
install_requires =
    pandas>=0.25.0
    py2vega>=0.5.0
    ipywidgets>=7.5.0,<8
    bqplot>=0.11.6

[options.extras_require]
test =
    pytest>=3.6
    pytest-cov
    nbval
docs =
    sphinx>=1.5
    recommonmark
    sphinx_rtd_theme
    nbsphinx>=0.2.13,<0.4.0
    jupyter_sphinx
    nbsphinx-link
    pytest_check_links
    pypandoc
