[metadata]
name = ipydatagrid
description = Fast Datagrid widget for the Jupyter Notebook and JupyterLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bloomberg/ipydatagrid
author = Bloomberg
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file = README.md
keywords = Jupyter, Widgets, IPython

[options]
install_requires =
    bqplot>=0.11.6
    ipywidgets>=7.5.0,<8
    pandas>=0.25.0
    py2vega>=0.5.0
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    pre-commit
docs =
    jupyter_sphinx
    nbsphinx>=0.2.13,<0.4.0
    nbsphinx-link
    pypandoc
    pytest_check_links
    recommonmark
    sphinx>=1.5
    sphinx_rtd_theme
test =
    nbval
    pytest>=3.6
    pytest-cov
