[metadata]
name = ipydatagrid
version = attr: ipydatagrid._version.__version__
description = Fast Datagrid widget for the Jupyter Notebook and JupyterLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bloomberg/ipydatagrid
author = Bloomberg
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description_file = README.md
keywords = Jupyter, Widgets, IPython

[options]
packages = find:
install_requires =
    bqplot>=0.11.6
    ipywidgets>=7.6.0,<9
    pandas
    py2vega>=0.5.0
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    nbval>=0.9
    pandas<=1.3.5
    pytest>=6
    pytest-cov>=3
